2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2012-07-09  Aaron Faupell <afaupell@users.sourceforge.net>

	* png.tcl: add capability to read and write images from color lists
        * png.tcl: make crc package optional in imageInfo

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* png.pcx: New file. Syntax definitions for the public commands of
	  the png package.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* png.tcl: Bumped version of package to 0.1.2.
	* png.man:
	* pkgIndex.tcl:

2007-04-30  Andreas Kupries  <andreask@activestate.com>

	* png.test: Added tests for removeComments, also converted to use
	  of 'TestFilesGlob'.

2004-04-28  Aaron Faupell <afaupell@users.sourceforge.net>

	* png.tcl: fixed output file encoding in removeComments

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* png.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*